modified index.html styles.css and added about.html contact.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
       <div class="details">
         <header>
+         <nav class="page-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
           <h2 data-testid="test-user-name">Eke Glory Chidera</h2>
         </header>
 
